WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101742
[EFL][WK2] REGRESSION (
r134043
): API tests crashes
https://bugs.webkit.org/show_bug.cgi?id=101742
Summary
[EFL][WK2] REGRESSION (r134043): API tests crashes
Sudarsana Nagineni (babu)
Reported
2012-11-09 05:20:59 PST
API tests crashes after
r134043
.
http://build.webkit.org/builders/EFL%20Linux%2064-bit%20Debug%20WK2/builds/5699/steps/API%20tests/logs/stdio
ASSERTION FAILED: context /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebKit2/UIProcess/efl/BatteryProvider.cpp(73) : WebKit::BatteryProvider::BatteryProvider(WTF::PassRefPtr<WebKit::WebContext>) 1 0x2b07f9564302 WebKit::BatteryProvider::BatteryProvider(WTF::PassRefPtr<WebKit::WebContext>) 2 0x2b07f9564239 WebKit::BatteryProvider::create(WTF::PassRefPtr<WebKit::WebContext>) 3 0x2b07f9541d96 EwkContext::EwkContext(WTF::PassRefPtr<WebKit::WebContext>) 4 0x2b07f9542250 EwkContext::create(WTF::PassRefPtr<WebKit::WebContext>) 5 0x2b07f95422b6 EwkContext::create() 6 0x2b07f954237d EwkContext::defaultContext() 7 0x2b07f95428ff ewk_context_default_get 8 0x40ba53 EWK2UnitTest::EWK2UnitTestBase::SetUp() 9 0x2b07fa139f6f testing::Test::Run() 10 0x2b07fa13a5d1 testing::internal::TestInfoImpl::Run() 11 0x2b07fa13ab42 testing::TestCase::Run() 12 0x2b07fa13f50e testing::internal::UnitTestImpl::RunAllTests() 13 0x2b07fa13e28c testing::UnitTest::Run() 14 0x40dc6c main 15 0x2b0800e4776d __libc_start_main 16 0x408909
Attachments
Patch
(1.90 KB, patch)
2012-11-09 05:32 PST
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-11-09 05:32:42 PST
Created
attachment 173276
[details]
Patch
Mikhail Pozdnyakov
Comment 2
2012-11-09 05:38:30 PST
LGTM
Raphael Kubo da Costa (:rakuco)
Comment 3
2012-11-09 05:40:00 PST
I guess this could go in as an unreviewed build fix.
Raphael Kubo da Costa (:rakuco)
Comment 4
2012-11-09 05:53:04 PST
Comment on
attachment 173276
[details]
Patch Clearing flags on attachment: 173276 Committed
r134056
: <
http://trac.webkit.org/changeset/134056
>
Raphael Kubo da Costa (:rakuco)
Comment 5
2012-11-09 05:53:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug