[EFL][WK2] REGRESSION (r134043): API tests crashes https://bugs.webkit.org/show_bug.cgi?id=101742

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-11-09
Reviewed by Kenneth Rohde Christiansen.

Do not assert on PassRefPtr<WebContext> after it becomes 0.

* UIProcess/efl/BatteryProvider.cpp:
(BatteryProvider::BatteryProvider):
* UIProcess/efl/NetworkInfoProvider.cpp:
(NetworkInfoProvider::NetworkInfoProvider):


Canonical link: https://commits.webkit.org/119842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134056 268f45cc-cd09-0410-ab3c-d52691b4dbfc